--- a/MvcBookstore/MvcBookstore/Views/Books/Index.cshtml
+++ b/MvcBookstore/MvcBookstore/Views/Books/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <!-- <a asp-action="Create">Create New</a> -->
 </p>
 <table class="table">
     <thead>
@@ -25,9 +25,12 @@
                 @Html.DisplayFor(modelItem => item.Title)
             </td>
             <td>
+                <a asp-action="Details" asp-route-id="@item.Id">Details</a>
+                <!--
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                -->
             </td>
         </tr>
 }
