--- a/MvcBookstore/MvcBookstore/Views/Books/Details.cshtml
+++ b/MvcBookstore/MvcBookstore/Views/Books/Details.cshtml
@@ -4,10 +4,9 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Book Details</h1>
 
 <div>
-    <h4>Book</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -16,9 +15,15 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Title)
         </dd>
+
+        <dt class = "col-sm-2">
+            Book ID
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.BookId)
+        </dd>
     </dl>
 </div>
 <div>
-    <!-- <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> | -->
     <a asp-action="Index">Back to List</a>
 </div>
