feat: reserve book function

--- a/MvcBookstore/MvcBookstore/Views/Books/Index.cshtml
+++ b/MvcBookstore/MvcBookstore/Views/Books/Index.cshtml
@@ -38,12 +38,16 @@
             </td>
             <td>
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a>
-                <!--
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-                -->
-            </td>
+                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                    @if (item.BookingNumber == 0)
+                    {
+                        <a asp-action="Reserve" asp-route-id="@item.Id">Reserve</a>
+                    }
+                    else
+                    {
+                        <span>Reserved</span>
+                    }
+                </td>
         </tr>
     }
     </tbody>
