--- a/MvcBookstore/MvcBookstore/Views/Books/Edit.cshtml
+++ b/MvcBookstore/MvcBookstore/Views/Books/Edit.cshtml
@@ -24,6 +24,11 @@
                 <span asp-validation-for="BookId" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="BookingNumber" class="control-label"></label>
+                <input asp-for="BookingNumber" class="form-control" />
+                <span asp-validation-for="BookingNumber" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
